--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,7 @@
 steps:
+- name: 'python:3.8'
+  entrypoint: 'pip'
+  args: ['install', '-r', 'requirements.txt', '-t', './']
 - name: 'gcr.io/cloud-builders/gcloud'
   args:
     - functions
